cluster/apps/kubernetes-dashboard/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: insecuretls
  namespace: kubernetes-dashboard
spec:
  forwardAuth:
    address: http://dashy.${INTERNAL_DOMAIN}
    tls:
      insecureSkipVerify: true
